--- a/src/app/+component/home/home.component.html
+++ b/src/app/+component/home/home.component.html
@@ -1,13 +1,13 @@
 <h1>Home</h1>
 <p>Quyen cua ban la: <strong>{{ currentUser.role }}</strong></p>
 <p>Trang nay co the duoc truy cap boi tat ca nguoi dung</p>
-<div>
-  nguoi dung hien tai tu api:
-  <ul>
-    <li *ngIf="loading" class="spinner-border spinner-border-sm"></li>
-    <li *ngIf="userFromApi">{{ userFromApi.firstname }} {{ userFromApi.lastname }}</li>
-  </ul>
-</div>
+<!--<div>-->
+  <!--nguoi dung hien tai tu api:-->
+  <!--<ul>-->
+    <!--<li *ngIf="loading" class="spinner-border spinner-border-sm"></li>-->
+    <!--<li *ngIf="userFromApi">{{ userFromApi.firstname }} {{ userFromApi.lastname }}</li>-->
+  <!--</ul>-->
+<!--</div>-->
 
 <div>
   danh sach:
