--- a/src/app/+component/form/validator/validator.component.html
+++ b/src/app/+component/form/validator/validator.component.html
@@ -3,12 +3,72 @@
   <div class="card-body">
     <form [formGroup]="registerForm" (submit)="onSubmit()">
       <div class="form-row">
+
         <div class="form-group col">
           <label>Title</label>
-          <select [formControlName]="title" class="form-control"
-                  ngClass="{'is-invalid': submitted && f.title.errors}" id="">
-
+          <select class="form-control" formControlName="title"
+                  [ngClass]="{'is-invalid': submitted && f.title.errors}" id="">
+            <option value=""></option>
+            <option value="Mr">Mr</option>
+            <option value="Mrs">Mrs</option>
+            <option value="Miss">Miss</option>
+            <option value="Ms">Ms</option>
           </select>
+          <div class="invalid-feedback" *ngIf="submitted && f.title.errors">
+            <div class="alert alert-danger" *ngIf="f.title.errors.required">Title is required</div>
+          </div>
+        </div>
+
+        <div class="form-group col-5">
+          <label>Fullname</label>
+          <input type="text" class="form-control" formControlName="fullName"
+                 [ngClass]="{'is-invalid': submitted && f.fullName.errors}" />
+          <div class="invalid-feedback" *ngIf="submitted && f.fullName.errors">
+            <div class="alert alert-danger" *ngIf="f.fullName.errors.required">Fullname is required</div>
+          </div>
+        </div>
+
+        <div class="form-group col-5">
+          <label>Username</label>
+          <input type="text" class="form-control" formControlName="userName"
+                 [ngClass]="{'is-invalid': submitted && f.userName.errors}"/>
+          <div class="invalid-feedback" *ngIf="submitted && f.userName.errors">
+            <div class="alert alert-danger" *ngIf="f.userName.errors.required">Username is required</div>
+          </div>
+        </div>
+
+        <div class="form-group col">
+          <label>Gender</label>
+          <select class="form-control" formControlName="gender"
+                  [ngClass]="{'is-invalid': submitted && f.gender.errors}">
+            <option value=""></option>
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
+          </select>
+          <div class="invalid-feedback" *ngIf="submitted && f.gender.errors">
+            <div class="alert alert-danger" *ngIf="f.gender.errors.required">Gender is required</div>
+          </div>
+        </div>
+
+        <div class="form-group col-5">
+          <label>Age</label>
+          <input type="text" class="form-control" formControlName="age"
+                 [ngClass]="{'is-invalid': submitted && f.age.errors}" />
+          <div class="invalid-feedback" *ngIf="submitted && f.age.errors">
+            <div class="alert alert-danger" *ngIf="f.age.errors.required">Age is required</div>
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col">
+            <label>Password</label>
+            <input type="text" class="form-control" formControlName="password"
+                   [ngClass]="{'is-invalid': submitted && f.password.errors}"/>
+            <div class="invalid-feedback" *ngIf="submitted && f.password.errors">
+              <div class="alert alert-danger" *ngIf="f.password.errors.required">Password is required</div>
+              <div class="alert alert-danger" *ngIf="f.password.errors.minLength">Password must be at least 6 characters</div>
+            </div>
+          </div>
         </div>
       </div>
     </form>
