--- a/src/app/+component/home/home.component.html
+++ b/src/app/+component/home/home.component.html
@@ -13,7 +13,7 @@
   danh sach:
   <ul>
     <li *ngFor="let user of users">
-      {{ user.username }} ({{ user.firstName }} {{ user.lastName }} ) - {{today | date:'short'}} - <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
+      {{ user.username }} ({{ user.firstName }} {{ user.lastName }} ) - {{today | date:'short'}} - <a (click)="deleteUser(user.id)" id="jsPoint" class="text-danger">Delete</a>
     </li>
   </ul>
 </div>
